# bacen-ifdata-scraper

./: .env.example  .gitignore  LICENSE  README.md  ifdata.py  process.py  pyproject.toml  query_gold_resumo.py  requirements.txt  run.py  scraping.py
bacen_ifdata/: __init__.py  config.py  manager.py  pipeline.py
bacen_ifdata/data_loader/: controller.py  extractor.py  loader.py  main.py
bacen_ifdata/data_manager/: processing.py
bacen_ifdata/data_transformer/: controller.py
bacen_ifdata/data_transformer/interfaces/: controller.py  prudential_conglomerates.py
bacen_ifdata/data_transformer/parser/: bank_consolidation.py  consolidation.py  control.py  database.py  financial_institution.py  prudential_summary.py  segment.py
bacen_ifdata/data_transformer/protocol/: controller.py
bacen_ifdata/data_transformer/schemas/: __init__.py  consolidation_model.py  database_model.py  prudential_conglomerate_summary.py  prudential_conglomerates_assets.py  prudential_conglomerates_liabilities.py  prudential_summary_model.py  segment_model.py
bacen_ifdata/data_transformer/transformers/: financial_conglomerates.py  prudential_conglomerates.py
bacen_ifdata/main/: cleaner.py  loader.py  scraper.py  transformer.py
bacen_ifdata/scraper/: institutions.py  reports.py  session.py  utils.py
bacen_ifdata/scraper/interfaces/: interacting.py
bacen_ifdata/scraper/storage/: processing.py
bacen_ifdata/transformer/: controller.py
bacen_ifdata/transformer/interfaces/: prudential_conglomerates.py
bacen_ifdata/transformer/parser/: bank_consolidation.py  consolidation.py  control.py  database.py  financial_institution.py  prudential_summary.py  segment.py
bacen_ifdata/transformer/schemas/: bank_consolidation_model.py  control_model.py  financial_institution_model.py
bacen_ifdata/transformer/transformers/: __init__.py  prudential_conglomerates.py
bacen_ifdata/utilities/: clean.py  config.py  configurations.py  humanize.py
bacen_ifdata_scraper/: config.py  exceptions.py  institutions.py  institutions_type.py  interfaces.py  reports.py  reports_type.py  scraper.py  session.py  utils.py
bacen_ifdata_scraper/interfaces/: interacting.py
bacen_ifdata_scraper/storage/: processing.py
data_analytics/: summary_financial_conglomerates.ipynb  summary_prudential_conglomerates.ipynb
docs/: ARCHITECTURE.md  DATA_PIPELINE.md  GOLD_LAYER_PROCESS.md
notebooks/: duckdb_data_warehouse.ipynb  gold_warehouse_star_schema.ipynb  horizontal_analysis_balance_dre.ipynb  silver_warehouse.ipynb
scripts/: audit_btg_individual_summary.py  audit_gold_integrity.py  audit_sicoob_individual_capital.py  audit_sicredi_prudential.py
src/bacen_ifdata/: __init__.py  application.py  manager.py  pipeline.py
src/bacen_ifdata/data_analytics/: .user.yml  dbt_project.yml  profiles.yml
src/bacen_ifdata/data_cleaner/: processing.py
src/bacen_ifdata/data_loader/: __init__.py  controller.py  storage.py
src/bacen_ifdata/data_transformer/: controller.py  transformer_factory.py
src/bacen_ifdata/interfaces/: __init__.py  pipeline_manager.py  session.py
src/bacen_ifdata/main/: cleaner.py  loader.py  scraper.py  transformer.py
src/bacen_ifdata/scraper/: exceptions.py  reports.py  session.py  utils.py
src/bacen_ifdata/utilities/: clean.py  configurations.py  csv_loader.py  geographic_regions.py  humanize.py  string_utils.py  version.py
tests/: conftest.py  test_ensure_clickable.py
tests/data_cleaner/: __init__.py  test_processing.py  test_processing_complex.py
tests/data_transformer/: __init__.py  conftest.py  test_controller.py  test_fixtures_integrity.py
tests/data_transformer/financial_conglomerates/: test_assets.py  test_income_statement.py  test_liabilities.py  test_portfolio_individuals_type_maturity.py  test_portfolio_legal_person_business_size.py  test_portfolio_legal_person_economic_activity.py  test_portfolio_legal_person_type_maturity.py  test_portfolio_number_clients_operations.py  test_portfolio_risk_level.py
tests/data_transformer/financial_conglomerates_scr/: test_portfolio_individuals_type_maturity.py  test_portfolio_legal_person_economic_activity.py  test_portfolio_legal_person_type_maturity.py
tests/data_transformer/foreign_exchange/: test_quarterly_foreign_currency_flow.py
tests/fixtures/: mock_data.py
tests/integration/: test_etl_integrity.py  test_gold_integrity.py  test_name_mapping.py
tests/mocks/: element.py  exception.py  web_driver.py
tests/scraper/: test_ensure_clickable.py
tests/unit/: test_pipeline.py
(+186 files in other folders)
